--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.1",
     "@tailwindcss/forms": "^0.3.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
