--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
+    "preview": "vite preview",
+    "start": "vite preview --port 3000",
     "test": "jest"
   },
   "dependencies": {
