--- a/vercel.json
+++ b/vercel.json
@@ -12,19 +12,20 @@
   ],
   "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
-      "dest": "/assets/$1"
+      "source": "/assets/(.*)",
+      "destination": "/assets/$1",
+      "headers": { 
+        "cache-control": "public, max-age=31536000, immutable" 
+      }
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": { "cache-control": "no-cache, no-store, must-revalidate" }
+      "source": "/(.*)",
+      "destination": "/index.html",
+      "headers": { 
+        "cache-control": "no-cache, no-store, must-revalidate" 
+      }
     }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
