--- a/vercel.json
+++ b/vercel.json
@@ -12,20 +12,28 @@
   ],
   "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "rewrites": [
+  "headers": [
     {
       "source": "/assets/(.*)",
-      "destination": "/assets/$1",
-      "headers": { 
-        "cache-control": "public, max-age=31536000, immutable" 
-      }
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     },
     {
       "source": "/(.*)",
-      "destination": "/index.html",
-      "headers": { 
-        "cache-control": "no-cache, no-store, must-revalidate" 
-      }
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
     }
+  ],
+  "rewrites": [
+    { "source": "/assets/(.*)", "destination": "/assets/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
